# oop-pmi_8-lr2

./: README.md
l2/: Array.cpp  Array.h  CMakeLists.txt  Twelve.cpp  Twelve.h  main.cpp  main1.cpp  tests.cpp
